# IndabaXKabale

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  check-deployment.sh  render.yaml  setup-deployment.sh
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20240101000001_initial_schema.sql  20240101000002_attendees_checkin.sql
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/errors/: mod.rs
backend/src/handlers/: admin.rs  attendees.rs  auth.rs  cabinet.rs  mod.rs  registrations.rs  sessions.rs
backend/src/middleware/: auth.rs
backend/src/models/: attendee.rs  mod.rs  registration.rs  session.rs  user.rs
backend/src/routes/: mod.rs
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.jsx  index.css
frontend/src/components/: LoadingSpinner.jsx  Navbar.jsx  ProtectedRoute.jsx  StatCard.jsx
frontend/src/hooks/: useTheme.js
frontend/src/pages/: AdminDashboard.jsx  CabinetDashboard.jsx  CheckInPage.jsx  HomePage.jsx  LoginPage.jsx  NotFoundPage.jsx  RegisterPage.jsx  SessionsPage.jsx
frontend/src/services/: api.js
frontend/src/store/: authStore.js  themeStore.js
frontend/src/utils/: index.js
